@@ -8,9 +8,8 @@ o Add MP4 support
   This code can be stolen from Rhythmbox
 o Enable fixed height mode for the GTK 2.3 treeview when it is available.
 o A song information dialog, which will later be used for tag editing.
-o Create ~/Music if it doesn't exist, but ask first? (Viet Yen Nguyen is on this)
+o Create ~/Music and ~/Music/Playlists/ if it doesn't exist, but ask first (Viet Yen Nguyen is on this)
 o D-BUS service (Sergio Rubio is on this)
-o Replaygain support for MP3, see http://gabriel.mp3-tech.org/mp3infotag.html
 o Dashboard integration (Lee Willis is on this)
 
 Tough:
@@ -39,6 +38,7 @@ o Gapless transition/crossfading
   and have a fancy adder somewhere in the pipeline that does the mixing
   when a new song comes in ..
 o Make drop-at-end work in the PlaylistWindow.
+o Figure out how to get the peak value from the ID3 RVA2 tag.
 
 Depends on other components:
 ============================
